--- a/buildsys.mk.in
+++ b/buildsys.mk.in
@@ -1,5 +1,7 @@
 #
-#  Copyright (c) 2007, Jonathan Schleifer <js-buildsys@webkeks.org>
+#  Copyright (c) 2007 - 2009, Jonathan Schleifer <js@webkeks.org>
+#
+#  https://webkeks.org/hg/buildsys/
 #
 #  Permission to use, copy, modify, and/or distribute this software for any
 #  purpose with or without fee is hereby granted, provided that the above
@@ -27,6 +29,8 @@ ERLC = @ERLC@
 OBJC = @OBJC@
 AR = @AR@
 LD = ${CC}
+RANLIB = @RANLIB@
+PYTHON = @PYTHON@
 CFLAGS = @CFLAGS@
 CXXFLAGS = @CXXFLAGS@
 CPPFLAGS = @CPPFLAGS@
@@ -34,6 +38,7 @@ DFLAGS = @DFLAGS@
 ERLCFLAGS = @ERLCFLAGS@
 OBJCFLAGS = @OBJCFLAGS@
 LDFLAGS = @LDFLAGS@
+PYTHON_FLAGS = @PYTHON_FLAGS@
 LIBS = @LIBS@
 PROG_IMPLIB_NEEDED = @PROG_IMPLIB_NEEDED@
 PROG_IMPLIB_LDFLAGS = @PROG_IMPLIB_LDFLAGS@
@@ -71,10 +76,13 @@ OBJS2 = ${OBJS1:.cc=.o}
 OBJS3 = ${OBJS2:.cxx=.o}
 OBJS4 = ${OBJS3:.d=.o}
 OBJS5 = ${OBJS4:.erl=.beam}
-OBJS += ${OBJS5:.m=.o}
+OBJS6 = ${OBJS5:.m=.o}
+OBJS7 = ${OBJS6:.py=.pyc}
+OBJS += ${OBJS7:.xpm=.o}
 
 .SILENT:
-.SUFFIXES: .beam .c .cc .cxx .d .erl .m
+.SUFFIXES:
+.SUFFIXES: .beam .c .cc .cxx .d .dep .erl .m .o .py .pyc .xpm
 .PHONY: all subdirs pre-depend depend install install-extra uninstall uninstall-extra clean distclean
 
 all:
@@ -91,26 +99,45 @@ subdirs:
 
 depend: pre-depend ${SRCS}
 	regen=0; \
+	deps=""; \
 	test -f .deps || regen=1; \
-	for i in ${SRCS}; do test $$i -nt .deps && regen=1; done; \
-	if test x"$$regen" = x"1"; then \
-		list=""; \
-		${DEPEND_STATUS}; \
-		for i in ${SRCS}; do \
-			case $${i##*.} in \
-			c|cc|cxx|m) \
-				list="$$list $$i"; \
+	for i in ${SRCS}; do \
+		case $$i in \
+			*.c) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.c}.dep"; \
 				;; \
-			esac; \
-		done; \
-		if test x"$$list" != "x"; then \
-			if ${CPP} ${CPPFLAGS} -M $$list >.deps; then \
-				${DEPEND_OK}; \
-			else \
-				${DEPEND_FAILED}; \
-			fi; \
+			*.cc) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.cc}.dep"; \
+				;; \
+			*.cxx) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.cxx}.dep"; \
+				;; \
+			*.m) \
+				test $$i -nt .deps && regen=1; \
+				deps="$$deps $${i%.m}.dep"; \
+				;; \
+		esac; \
+	done; \
+	if test x"$$regen" = x"1" -a x"$$deps" != "x"; then \
+		${DEPEND_STATUS}; \
+		if ${MAKE} ${MFLAGS} $$deps && cat $$deps >.deps; then \
+			rm -f $$deps; \
+			${DEPEND_OK}; \
+		else \
+			:> .deps; \
+			touch -t 0001010000 .deps; \
+			${DEPEND_FAILED}; \
 		fi; \
 	fi
+
+.c.dep .cc.dep .cxx.dep .m.dep:
+	${CPP} ${CPPFLAGS} -M $< >$@ || (rm -f $@; exit 1)
+
+.d.dep:
+.xpm.dep:
 
 pre-depend:
 
@@ -123,14 +150,21 @@ ${PROG} ${PROG_NOINST}: ${EXT_DEPS} ${OBJS}
 	fi
 
 ${LIB} ${LIB_NOINST}: ${EXT_DEPS} ${OBJS}
-	${LINK_STATUS}
-	if ${LD} -o $@ ${OBJS} ${LIB_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
-		${LINK_OK}; \
-	else \
-		${LINK_FAILED}; \
-	fi
+	case $@ in \
+		*.a) \
+			${MAKE} ${MFLAGS} STATIC_LIB=${LIB} LIB= $@ || exit 1 \
+			;; \
+		*) \
+			${LINK_STATUS}; \
+			if ${LD} -o $@ ${OBJS} ${LIB_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
+				${LINK_OK}; \
+			else \
+				${LINK_FAILED}; \
+			fi \
+			;; \
+	esac
 
-${PLUGIN} ${PLUGIN_NONST}: ${EXT_DEPS} ${OBJS}
+${PLUGIN} ${PLUGIN_NOINST}: ${EXT_DEPS} ${OBJS}
 	${LINK_STATUS}
 	if ${LD} -o $@ ${OBJS} ${PLUGIN_LDFLAGS} ${LDFLAGS} ${LIBS}; then \
 		${LINK_OK}; \
@@ -140,10 +174,11 @@ ${PLUGIN} ${PLUGIN_NONST}: ${EXT_DEPS} ${OBJS}
 
 ${STATIC_LIB} ${STATIC_LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 	${LINK_STATUS}
-	if ${AR} cr $@ ${OBJS}; then \
+	if ${AR} cr $@ ${OBJS} && ${RANLIB} ${@}; then \
 		${LINK_OK}; \
 	else \
 		${LINK_FAILED}; \
+		rm -f $@; \
 	fi
 
 .c.o:
@@ -189,6 +224,22 @@ ${STATIC_LIB} ${STATIC_LIB_NOINST}: ${EXT_DEPS} ${OBJS}
 .m.o:
 	${COMPILE_STATUS}
 	if ${OBJC} ${OBJCFLAGS} ${CPPFLAGS} -c -o $@ $<; then \
+		${COMPILE_OK}; \
+	else \
+		${COMPILE_FAILED}; \
+	fi
+
+.py.pyc:
+	${COMPILE_STATUS}
+	if ${PYTHON} ${PYTHON_FLAGS} -c "import py_compile; py_compile.compile('$<')"; then \
+		${COMPILE_OK}; \
+	else \
+		${COMPILE_FAILED}; \
+	fi
+
+.xpm.o:
+	${COMPILE_STATUS}
+	if ${CC} ${CFLAGS} ${CPPFLAGS} -x c -c -o $@ $<; then \
 		${COMPILE_OK}; \
 	else \
 		${COMPILE_FAILED}; \
@@ -353,8 +404,8 @@ clean:
 		${MAKE} ${MFLAGS} clean || exit 1; \
 		${DIR_LEAVE}; \
 	done
-	
-	for i in ${OBJS} ${CLEAN} ${CLEAN_LIB} .deps; do \
+
+	for i in ${OBJS} ${CLEAN} ${CLEAN_LIB} ${DEPS}; do \
 		if test -f $$i -o -d $$i; then \
 			if rm -fr $$i; then \
 				${DELETE_OK}; \
@@ -370,8 +421,8 @@ distclean: clean
 		${MAKE} ${MFLAGS} distclean || exit 1; \
 		${DIR_LEAVE}; \
 	done
-	
-	for i in ${PROG} ${PROG_NOINST} ${LIB} ${LIB_NOINST} ${STATIC_LIB} ${STATIC_LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${DISTCLEAN} *~; do \
+
+	for i in ${PROG} ${PROG_NOINST} ${LIB} ${LIB_NOINST} ${STATIC_LIB} ${STATIC_LIB_NOINST} ${PLUGIN} ${PLUGIN_NOINST} ${DISTCLEAN} .deps *~; do \
 		if test -f $$i -o -d $$i; then \
 			if rm -fr $$i; then \
 				${DELETE_OK}; \
@@ -398,4 +449,4 @@ INSTALL_FAILED = printf "\033[K\033[0;31mFailed to install \033[1;31m$$i\033[0;3
 DELETE_OK = printf "\033[K\033[0;34mDeleted \033[1;34m$$i\033[0;34m.\033[0m\n"
 DELETE_FAILED = printf "\033[K\033[0;31mFailed to delete \033[1;31m$$i\033[0;31m!\033[0m\n"; exit 1
 
--include .deps
+include .deps
