--- a/win32/libmowgli/VS2008/VS2008.vcproj
+++ b/win32/libmowgli/VS2008/VS2008.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;C:\dev-src\libmowgli\win32&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;WIN32_MSC"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -268,6 +268,10 @@
 				RelativePath="..\..\..\src\libmowgli\win32_dlfcn.c"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libmowgli\win32_support.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -412,6 +416,10 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libmowgli\win32_dlfcn.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libmowgli\win32_support.h"
 				>
 			</File>
 		</Filter>
