--- a/win32/libmowgli/dicttest/dicttest.vcproj
+++ b/win32/libmowgli/dicttest/dicttest.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;C:\dev-src\libmowgli\src\libmowgli&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\..\src\libmowgli&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -116,7 +116,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="&quot;C:\dev-src\libmowgli\src\libmowgli&quot;"
+				AdditionalIncludeDirectories="&quot;..\..\..\src\libmowgli&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
