--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,3 +1,3 @@
-SUBDIRS = randomtest listsort formattertest dicttest patriciatest
+SUBDIRS = randomtest listsort formattertest dicttest patriciatest patriciatest2
 
 include ../../buildsys.mk
