Finish moving files around.

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -1,34 +1,12 @@
 include ../../extra.mk
 
 SHARED_LIB = ${LIB_PREFIX}mowgli-2${LIB_SUFFIX}
-LIB_MAJOR = 2
+LIB_MAJOR = 0
 LIB_MINOR = 0
 
-SUBDIRS = core base container platform module object
+SUBDIRS = core base atomic container ext platform module object
 
-SRCS = \
-       mowgli_argstack.c		\
-       mowgli_bitvector.c		\
-       mowgli_error_backtrace.c		\
-       mowgli_formatter.c		\
-       mowgli_global_storage.c		\
-       mowgli_hash.c			\
-       mowgli_hook.c			\
-       mowgli_mempool.c			\
-       mowgli_signal.c			\
-       mowgli_spinlock.c
-
-INCLUDES = mowgli.h			\
-	   mowgli_argstack.h		\
-	   mowgli_bitvector.h		\
-	   mowgli_error_backtrace.h	\
-	   mowgli_formatter.h		\
-	   mowgli_global_storage.h	\
-	   mowgli_hash.h		\
-	   mowgli_hook.h		\
-	   mowgli_mempool.h		\
-	   mowgli_signal.h		\
-	   mowgli_spinlock.h
+INCLUDES = mowgli.h
 
 include ../../buildsys.mk
 
@@ -40,4 +18,6 @@ LIBS += core/mowgli.core.a \
 	platform/win32/mowgli.platform.win32.a \
 	module/mowgli.module.a \
 	object/mowgli.object.a \
-	container/mowgli.container.a
+	container/mowgli.container.a \
+	ext/mowgli.ext.a \
+	atomic/mowgli.atomic.a
