--- a/src/libmowgli/core/Makefile
+++ b/src/libmowgli/core/Makefile
@@ -17,9 +17,9 @@ INCLUDES = init.h		\
 	   logger.h		\
 	   mowgli_string.h \
 
+includesubdir = $(PACKAGE)/core
+
 include ../../../buildsys.mk
 
 CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -DMOWGLI_CORE
 CFLAGS += ${LIB_CFLAGS}
-
-includesubdir += /core
