--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -4,6 +4,16 @@ SHARED_LIB = ${LIB_PREFIX}mowgli-2${LIB_SUFFIX}
 LIB_MAJOR = 0
 LIB_MINOR = 0
 
+SUBDIRS = core base atomic container ext platform module object
+
+INCLUDES = mowgli.h
+
+include ../../buildsys.mk
+
+LDFLAGS += -Wl,-Bsymbolic
+CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -DMOWGLI_CORE
+CFLAGS += ${LIB_CFLAGS}
+
 LIB_OBJS += core/mowgli.core.a \
 	base/mowgli.base.a \
 	platform/win32/mowgli.platform.win32.a \
@@ -13,12 +23,3 @@ LIB_OBJS += core/mowgli.core.a \
 	ext/mowgli.ext.a \
 	atomic/mowgli.atomic.a
 
-SUBDIRS = core base atomic container ext platform module object
-
-INCLUDES = mowgli.h
-
-include ../../buildsys.mk
-
-LDFLAGS += -Wl,--discard-none
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -DMOWGLI_CORE
-CFLAGS += ${LIB_CFLAGS}
