--- a/src/examples/listsort/Makefile
+++ b/src/examples/listsort/Makefile
@@ -4,4 +4,4 @@ SRCS = listsort.c
 include ../../../buildsys.mk
 
 CPPFLAGS += -I../../libmowgli
-LIBS += -L../../libmowgli -lmowgli
+LIBS += -L../../libmowgli -lmowgli-2
