--- a/src/examples/randomtest/Makefile
+++ b/src/examples/randomtest/Makefile
@@ -4,4 +4,4 @@ SRCS = randomtest.c
 include ../../../buildsys.mk
 
 CPPFLAGS += -I../../libmowgli
-LIBS += -L../../libmowgli -lmowgli
+LIBS += -L../../libmowgli -lmowgli-2
