ext/confparse: port from atheme-7

--- a/src/libmowgli/ext/Makefile
+++ b/src/libmowgli/ext/Makefile
@@ -2,10 +2,12 @@ include ../../../extra.mk
 
 STATIC_PIC_LIB_NOINST = mowgli.ext.a
 
-SRCS = error_backtrace.c		\
+SRCS = confparse.c 			\
+       error_backtrace.c		\
        global_storage.c 		\
 
-INCLUDES = error_backtrace.h		\
+INCLUDES = confparse.h			\
+	   error_backtrace.h		\
 	   global_storage.h		\
 
 includesubdir = $(PACKAGE)/ext
