Fix eventloop module building.

--- a/src/libmowgli/Makefile
+++ b/src/libmowgli/Makefile
@@ -4,7 +4,7 @@ SHARED_LIB = ${LIB_PREFIX}mowgli-2${LIB_SUFFIX}
 LIB_MAJOR = 0
 LIB_MINOR = 0
 
-SUBDIRS = core base atomic container ext platform module object
+SUBDIRS = core base atomic container eventloop ext platform module object
 
 INCLUDES = mowgli.h
 
@@ -22,6 +22,7 @@ LIB_OBJS += core/mowgli.core.a \
 	module/mowgli.module.a \
 	object/mowgli.object.a \
 	container/mowgli.container.a \
+	eventloop/mowgli.eventloop.a \
 	ext/mowgli.ext.a \
 	atomic/mowgli.atomic.a
 
