--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,3 +1,3 @@
-SUBDIRS = randomtest listsort formattertest patriciatest patriciatest2
+SUBDIRS = randomtest listsort formattertest patriciatest patriciatest2 timertest echoserver
 
 include ../../buildsys.mk
