--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,20 @@ buildsys.mk
 config.log
 config.status
 extra.mk
-libmowgli.pc
+libmowgli-2.pc
 src/examples/dicttest/dicttest
 src/examples/formattertest/formattertest
 src/examples/listsort/listsort
 src/examples/randomtest/randomtest
 src/examples/patriciatest/patriciatest
 src/examples/patriciatest2/patriciatest2
-src/libmowgli/mowgli_config.h
+src/examples/echoserver/echoserver
+src/examples/timertest/timertest
+src/libmowgli/platform/autoconf.h
 .deps
 *.dylib
 *.o
+*.a
 *.so
 *.so.*
 *~
