--- a/src/libmowgli/eventloop/Makefile
+++ b/src/libmowgli/eventloop/Makefile
@@ -2,7 +2,7 @@ include ../../../extra.mk
 
 STATIC_PIC_LIB_NOINST = mowgli.eventloop.a
 
-SRCS = eventloop.c pollable.c timer.c null_pollops.c poll_pollops.c epoll_pollops.c
+SRCS = eventloop.c pollable.c timer.c null_pollops.c poll_pollops.c epoll_pollops.c kqueue_pollops.c
 
 INCLUDES = eventloop.h
 
