core: Fix installation of threads.h
As a sidenote, people really need to compile-test their damn code.

--- a/src/libmowgli/core/Makefile
+++ b/src/libmowgli/core/Makefile
@@ -20,8 +20,7 @@ INCLUDES = init.h		\
 	   iterator.h		\
 	   logger.h		\
 	   mowgli_string.h	\
-	   stdinc.h		\
-	   thread.h
+	   stdinc.h
 
 includesubdir = $(PACKAGE)/core
 
