Add MOWGLI_INITIALIZER_FUNC() macro for declaring C1X-style implicit initializers on GCC/MSVC.

--- a/src/libmowgli/platform/Makefile
+++ b/src/libmowgli/platform/Makefile
@@ -1,4 +1,8 @@
 SUBDIRS = win32
 
+INCLUDES = constructor.h
+
+includesubdir = $(PACKAGE)/platform
+
 include ../../../buildsys.mk
 include ../../../extra.mk
