ext/program_opts: simple popt-like wrapper around mowgli_getopt_long()

--- a/src/libmowgli/ext/Makefile
+++ b/src/libmowgli/ext/Makefile
@@ -6,11 +6,13 @@ SRCS = confparse.c 			\
        error_backtrace.c		\
        getopt_long.c			\
        global_storage.c 		\
+       program_opts.c			\
 
 INCLUDES = confparse.h			\
 	   error_backtrace.h		\
 	   getopt_long.h		\
 	   global_storage.h		\
+	   program_opts.h		\
 
 includesubdir = $(PACKAGE)/ext
 
