--- a/src/examples/Makefile
+++ b/src/examples/Makefile
@@ -1,3 +1,3 @@
-SUBDIRS = randomtest listsort formattertest patriciatest patriciatest2 timertest echoserver libevent-bench helpertest
+SUBDIRS = echoserver formattertest helpertest libevent-bench linetest listsort patriciatest patriciatest2 randomtest timertest
 
 include ../../buildsys.mk
