--- a/configure.ac
+++ b/configure.ac
@@ -40,10 +40,14 @@ AC_C_CONST
 AC_FUNC_CLOSEDIR_VOID
 AC_CHECK_FUNCS([memset setlocale strcasecmp strchr strdup strerror strtol strtod])
 AC_CHECK_FUNCS([printf sprintf snprintf vsnprintf mmap gettimeofday strndup])
-AC_CHECK_FUNCS([kqueue fcntl ioctlsocket])
+AC_CHECK_FUNCS([kqueue fcntl])
 AC_FUNC_STAT
 
 AC_CHECK_LIB(dl, dlopen, [LIBS="$LIBS -ldl"])
+AC_CHECK_LIB(ws2_32, ioctlsocket, [
+	     LIBS="$LIBS -lws2_32"
+	     AC_DEFINE([HAVE_IOCTLSOCKET], [], [Define to 1 if you have ioctlsocket])
+	     ])
 
 dnl Detect which loader to use
 AC_MSG_CHECKING(loader type)
