--- a/configure.ac
+++ b/configure.ac
@@ -75,12 +75,13 @@ case "$target" in
 	;;
 *)
     MOWGLI_MODULE='loader_posix.c'
-    PTHREAD_LIBS='-pthread'
+    ACX_PTHREAD
+    CPPFLAGS="$CPPFLAGS $PTHREAD_CFLAGS"
+    AC_SUBST(PTHREAD_LIBS)
 	;;
 esac
 AC_MSG_RESULT($MOWGLI_MODULE);
 AC_SUBST(MOWGLI_MODULE)
-AC_SUBST(PTHREAD_LIBS)
 
 # Check for optional features.
 EXAMPLES_BUILD=""
