--- a/configure.ac
+++ b/configure.ac
@@ -18,6 +18,11 @@ AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 AC_ISC_POSIX
 
+AC_PROG_CC_C99
+AS_IF([test "x$ac_cv_prog_cc_c99" = "xno"], [
+   AC_MSG_ERROR([C compiler does not support C99], 1)
+])
+
 test x"$GCC" = x"yes" && CFLAGS="$CFLAGS -pipe -Wall"
 
 # XXX workaround
