Fix ax_check_openssl regression, fix tabs slipping into configure.ac

--- a/src/libmowgli/platform/autoconf.h.in
+++ b/src/libmowgli/platform/autoconf.h.in
@@ -43,6 +43,9 @@
 /* Define to 1 if you have the <ndir.h> header file, and it defines `DIR'. */
 #undef HAVE_NDIR_H
 
+/* Define to 1 if OpenSSL is available */
+#undef HAVE_OPENSSL
+
 /* Define to 1 if you have the <poll.h> header file. */
 #undef HAVE_POLL_H
 
