--- a/src/libmowgli/base/Makefile
+++ b/src/libmowgli/base/Makefile
@@ -24,5 +24,5 @@ includesubdir = $(PACKAGE)/base
 
 include ../../../buildsys.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -DMOWGLI_CORE
+CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -I../../.. -DMOWGLI_CORE
 CFLAGS += ${LIB_CFLAGS}
