--- a/src/libmowgli/object/Makefile
+++ b/src/libmowgli/object/Makefile
@@ -16,5 +16,5 @@ includesubdir = $(PACKAGE)/object
 
 include ../../../buildsys.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -DMOWGLI_CORE
+CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -I../../.. -DMOWGLI_CORE
 CFLAGS += ${LIB_CFLAGS}
