--- a/src/libmowgli/core/Makefile
+++ b/src/libmowgli/core/Makefile
@@ -28,5 +28,5 @@ includesubdir = $(PACKAGE)/core
 
 include ../../../buildsys.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -DMOWGLI_CORE
+CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -I../../.. -DMOWGLI_CORE
 CFLAGS += ${LIB_CFLAGS}
