--- a/src/libmowgli/eventloop/Makefile
+++ b/src/libmowgli/eventloop/Makefile
@@ -10,5 +10,5 @@ includesubdir = $(PACKAGE)/eventloop
 
 include ../../../buildsys.mk
 
-CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -DMOWGLI_CORE
+CPPFLAGS += ${LIB_CPPFLAGS} -I. -I.. -I../../.. -DMOWGLI_CORE
 CFLAGS += ${LIB_CFLAGS}
